<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>lio_sam</name>
    <version>1.0.0</version>
    <description>Lidar Odometry</description>

    <author>Tixiao Shan</author>
    <maintainer email="mbednarek@flyps.io">Michał Bednarek</maintainer>

    <license>TODO</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>

    <depend>Eigen</depend>
    <depend>OpenCV</depend>
    <depend>cv_bridge</depend>
    <depend>geometry_msgs</depend>
    <depend>gtsam</depend>
    <depend>nav_msgs</depend>
    <depend>pcl_msgs</depend>
    <depend>perception_pcl</depend>
    <depend>rclcpp</depend>
    <depend>rclpy</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_eigen</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_sensor_msgs</depend>
    <depend>visualization_msgs</depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <!-- Test dependencies -->
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_cmake_cppcheck</test_depend>
    <test_depend>ament_cmake_cpplint</test_depend>
    <test_depend>ament_cmake_uncrustify</test_depend>
    <test_depend>ament_cmake_flake8</test_depend>
    <test_depend>ament_cmake_pep257</test_depend>
    <test_depend>ament_cmake_xmllint</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
